--- a/eclipse/.project
+++ b/eclipse/.project
@@ -14,4 +14,16 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>common</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/letsmod-mod/common</locationURI>
+		</link>
+		<link>
+			<name>resources</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/letsmod-mod/resources</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
